--- a/src/main/webapp/resources/css/generic.css
+++ b/src/main/webapp/resources/css/generic.css
@@ -8,4 +8,18 @@ body{
 table{
 	margin: 0 auto;
 	box-shadow: 0px 0px 5px black;
+	width: 50%;
+}
+
+table th{
+	padding: 5px 40px;
+	width: 35%;
+}
+
+table td{
+	text-align: center;
+}
+
+table th .link{
+	width: 10%;
 }
