--- a/src/main/webapp/resources/css/generic.css
+++ b/src/main/webapp/resources/css/generic.css
@@ -1,25 +1,37 @@
 @CHARSET "ISO-8859-1";
 
-body{
+body {
 	font-family: sans-serif;
 }
 
-
-table{
+table {
 	margin: 0 auto;
 	box-shadow: 0px 0px 5px black;
 	width: 50%;
 }
 
-table th{
+table th {
 	padding: 5px 40px;
 	width: 35%;
 }
 
-table td{
+table td {
 	text-align: center;
 }
 
-table th .link{
+table th .link {
 	width: 10%;
+}
+
+a {
+	color: #428bca;
+	text-decoration: none;
+}
+
+a:HOVER {
+	text-decoration: underline;
+}
+
+a:VISITED {
+	color: #428bca;
 }
